--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Rückmeldungstool</title>
-        <meta name="description" content="Our first page">
-        <meta name="keywords" content="html tutorial template">
+        <title>Freigabetool</title>
         <link rel="stylesheet" href="style.css">
 
         
